--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -60,11 +60,27 @@
             android:textColor="#fff"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/signupfb" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/facebook" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:background="#3A5A99"
+                android:text="Sign Up with Facebook"
+                android:textColor="#fff" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
